gccida/g2/ix86_zero_extend_to_Pmode
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_zero_extend_to_Pmode/src/i386.c:9559:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_zero_extend_to_Pmode/src/i386.c:9568:21: error: use of undeclared identifier 'machine_mode'
return force_reg( ( machine_mode)( 4 - ( ( v3 == 0) - 1)), exp); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_zero_extend_to_Pmode/src/i386.c:9572:21: error: use of undeclared identifier 'machine_mode'
v5 = gen_reg_rtx( ( machine_mode)v4); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_zero_extend_to_Pmode/src/obj/i386.o] Error 1
